// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiNotificationBadge testClass1 testClass2"
  data-test-subj="test subject string"
>
  5
</span>
`;

exports[`EuiNotificationBadge props color accent is rendered 1`] = `
<span
  class="euiNotificationBadge"
>
  5
</span>
`;

exports[`EuiNotificationBadge props color subdued is rendered 1`] = `
<span
  class="euiNotificationBadge euiNotificationBadge--subdued"
>
  5
</span>
`;

exports[`EuiNotificationBadge props size m is rendered 1`] = `
<span
  class="euiNotificationBadge euiNotificationBadge--medium"
>
  5
</span>
`;

exports[`EuiNotificationBadge props size s is rendered 1`] = `
<span
  class="euiNotificationBadge"
>
  5
</span>
`;
